<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_movie_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                tools:src="@drawable/test_cover" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_title"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:layout_marginEnd="@dimen/margin_default_medium"
                tools:text="Some awesome movie" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_year"
                style="sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_small"
                tools:text="(2001)" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:text="@string/full_view_director" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                tools:text="Yoda" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:text="@string/full_view_genres" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                tools:text="Action" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:text="@string/full_view_stars" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_starts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                tools:text="Action" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:text="@string/full_view_rating" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                tools:text="8.8" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginTop="@dimen/margin_default_medium"
                android:text="@string/full_view_plot" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_movie_plot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default_medium"
                android:layout_marginBottom="100dp"
                tools:text="Long plot" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_toggle_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_default_medium"
        tools:text="@string/btn_save_to_watch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>